polyphone (2.5) unstable; urgency=low

  * (new) "play with" feature, for playing several instruments or presets
  * (new) sample tool for adding a crossfade around loop points
  * (new) tool for creating samples that are a merge of all instruments / samples inside a preset
  * (new) sfz support of trigger "release"
  * (new) mp3, aiff and snd sample formats can be imported
  * (improvement) the autoloop tool is more accurate and is not based on the existing loop
  * (improvement) the state of the keyboard and recorder windows is restored
  * (improvement) the sf2 / sf3 export can now create one file per preset
  * (improvement) sound engine still playing faster
  * (improvement) a sound engine overflow is not stopping all voices anymore
  * (fix) divisions are correctly enlighted at the preset level when playing
  * (fix) the treeview sort is updated after a key range change
  * (fix) next available bank / preset correctly computed
  * (fix) no default modulators at the sample level
  * (fix) sfz attenuation export
  * (fix) finding root keys of very short loops

 -- Davy Triponney <davy.triponney@gmail.com>  Fri, 22 Nov 2024 14:10:12 +0100
  

polyphone (2.4) UNRELEASED; urgency=low

  * (new) player mode for using Polyphone as a synthesizer
  * (new) Catalan and Polish translations
  * (new) sfz opcodes amp_veltrack, fil_veltrack, fil_keytrack, fil_keycenter can be imported / exported
  * (new) support of relative MIDI CC values
  * (new) sample mode "release"
  * (new) navigation between tabs with Ctrl+Tab or Ctrl+PageDown and Ctrl+Shift+Tab or Ctrl+PageUp
  * (improvement) the window borders are now an option
  * (improvement) faster and more accurate sound engine
  * (improvement) default controller values consistent with the modulators of the loaded soundfont
  * (improvement) GrandOrgue parser - group instruments by presets if switches are defined
  * (improvement) GrandOrgue parser - reading the end of samples