@@ -153,6 +153,7 @@ public:
     bool processControllerChanged(int channel, int num, int value) override;
     bool processBendChanged(int channel, float value) override;
     bool processBendSensitivityChanged(int channel, float semitones) override;
+    bool processProgramChanged(int channel, quint16 bank, quint8 preset) override;
 
     // Following functions are executed by the audio server (thread 3)
     void setSampleRateAndBufferSize(quint32 sampleRate, quint32 bufferSize);
